# aiogram_fastpi_mongo_message_keeper

./: .dockerignore  .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
aiogram_bot/: Dockerfile  loader.py  main.py
aiogram_bot/handlers/: routers.py
aiogram_bot/handlers/custom_handlers/: message_history.py  message_send.py
aiogram_bot/handlers/default_heandlers/: cancel.py  start.py
aiogram_bot/keyboards/inline/: cancel.py  greeting.py
aiogram_bot/logs/: loging.log.2024-07-15_01  loging.log.2024-07-16_11
aiogram_bot/states/: states.py
aiogram_bot/utils/: api_manager.py
app/: Dockerfile  docker-entrypoint.sh  main.py
app/api/: messages.py
app/database/: connect.py  database.py
app/schemes/: messages.py
config_data/: config.py
nginx/: nginx.conf
